--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Scientific Calculator</title>
+    <title>Grid</title>
 
-    <!--Bootstrap Css-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,10 +13,266 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="./style.css" />
+    <style>
+      .btn{
+        border-radius: 0 !important;
+      }
+      .num-btn{
+        background-color: rgb(255, 255, 255);
+      }
+    </style>
   </head>
+
   <body>
-    <!--Bootstrap Script-->
+    <div
+      class="container d-flex justify-content-center min-vh-100 align-items-center"
+    >
+      <div
+        class="cal p-2 pt-3 bg-light rounded-1"
+        style="width: 25rem; height: 38rem"
+      >
+         <div class="col justify-content-start p-1">
+
+          <p class="m-0">Scientific Calculator</p>
+
+          <!--Input row-->
+          <div class="row mt-1">
+            <div class="col">
+              <input
+                type="text"
+                class="form-control fs-1 fw-bold text-end border-1 bg-light shadow-none" id="intext"
+                />
+            </div>
+          </div>
+  
+          <!--Second Row-->
+          <div class="row w-75 gap-1 mt-2 ms-1 justify-content-start">
+            <div class="btn col-3 p-2 btn-light px-3">
+              <span>DEG</span>
+            </div>
+            <div class="btn col-3 p-2   btn-light">
+              <span>F-E</span>
+            </div>
+          </div>
+  
+          <!--Third Row-->
+          <div class="row mt-2 justify-content-center gap-1">
+            <div class="btn col-2 p-2 btn-light disabled">
+              <span>MC</span>
+            </div>
+            <div class="btn col-2 p-2 btn-light disabled">
+              <span>MR</span>
+            </div>
+            <div class="btn col-2 p-2 btn-light">
+              <span>M +</span>
+            </div>
+            <div class="btn col-2 p-2 btn-light">
+              <span>M -</span>
+            </div>
+            <div class="btn col-2 p-2 btn-light">
+              <span>MS</span>
+            </div>
+          </div>
+  
+          <!--Fourth Row-->
+          <div class="row mt-1 justify-content-start">
+            <!--trigonometry-->
+            <div class="col-5">
+              <div class="dropdown">
+                <button class="btn d-flex align-items-center border-0 " type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <img src="./icons/trigo.png" alt="" width="21px" class="mx-1">
+                  Trigonometry
+                 <img src="./icons/down-arrow.png" alt="" width="18px" class="mx-1">
+                </button>
+                <ul class="dropdown-menu p-0 rounded-0">
+                  <li class="d-flex justify-content-center">
+                    <button class="btn col-3 btn-light rounded-0">2<sup>nd</sup></button>
+                    <button class="btn col-3 btn-light rounded-0">sin</button>
+                    <button class="btn col-3 btn-light rounded-0">cos</button>
+                    <button class="btn col-3 btn-light rounded-0">tan</button>
+                  </li>
+                  <li class="d-flex justify-content-center">
+                    <button class="btn col-3 btn-light rounded-0">hyp</button>
+                    <button class="btn col-3 btn-light rounded-0">sec</button>
+                    <button class="btn col-3 btn-light rounded-0">csc</button>
+                    <button class="btn col-3 btn-light rounded-0">cot</button>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <!--function-->
+            <div class="col-5">
+              <div class="dropdown">
+                <button class="btn d-flex align-items-center border-0 " type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <img src="./incos/function.png" alt="" height="20px" class="mx-1">
+                  Function
+                 <img src="./icons/down-arrow.png" alt="" width="18px" class="mx-1">
+                </button>
+                <div class="dropdown-menu p-0 rounded-0">
+                  <div class="d-flex justify-content-center">
+                    <button class="btn col btn-light rounded-0">|x|</button>
+                    <button class="btn col btn-light rounded-0">⎣x⎦</button>
+                    <button class="btn col btn-light rounded-0">⎡x⎤</button>
+                  </div>
+                  <div class="d-flex justify-content-center">
+                    <button class="btn col btn-light rounded-0">rand</button>
+                    <button class="btn col btn-light rounded-0">&#8594;dms</button>
+                    <button class="btn col btn-light rounded-0">&#8594;deg</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+           
+          </div>
+  
+          <div class="row w-auto mt-1 gap-1 justify-content-center">
+            <div class="btn col-2 p-2 shadow btn-light"  id="2nd">
+             2 <sup>nd</sup>
+            </div>
+            <div class="btn col-2 p-2 shadow btn-light" id="pi">
+              π
+            </div>
+            <div class="btn col-2 p-2 shadow btn-light">
+              <span>e</span>
+            </div>
+            <div class="btn col-2 p-2 shadow btn-light" id="C">
+             C
+            </div>
+            <div class="btn col-2 p-2    shadow   btn-light" id="rl">
+              <img src="./icons/clear.png" alt="clear" width="25px" id="rl">
+            </div>
+          </div>
+  
+          <div class="row   mt-1 gap-1 justify-content-center">
+            <div class="btn col-2 p-2 2nd-btn-1 shadow 2nd-btn-toggle  btn-light" id="x2">
+             x <sup>2</sup>
+            </div>
+            <div class="btn col-2 p-2 2nd-btn-2 shadow 2nd-btn-toggle  d-none    btn-light" id="x3">
+             x <sup>3</sup>
+            </div>
+            <div class="btn col-2 p-2   shadow     btn-light" id="1/x">
+              1/x
+            </div>
+            <div class="btn col-2 p-2  shadow      btn-light"  >
+              |x|
+            </div>
+            <div class="btn col-2 p-2   shadow     btn-light"  >
+              exp
+            </div>
+            <div class="btn col-2 p-2    shadow    btn-light"  >
+             mod
+            </div>
+          </div>
+  
+          <div class="row   mt-1 gap-1 justify-content-center">
+            <div class="btn col-2 p-2  2nd-btn-1   shadow 2nd-btn-toggle   btn-light" id="2sqrt">
+              <sup>2</sup>&#8730x
+            </div>
+            <div class="btn col-2 p-2  2nd-btn-2   shadow d-none 2nd-btn-toggle  btn-light" id="3sqrt">
+              <sup>3</sup>&#8730x
+            </div>
+            <div class="btn col-2 p-2    shadow    btn-light" id="(">
+              (
+            </div>
+            <div class="btn col-2 p-2   shadow     btn-light" id=")">
+              )
+            </div>
+            <div class="btn col-2 p-2  shadow      btn-light" id="fact"  >
+             n!
+            </div>
+            <div class="btn col-2 p-2  shadow      btn-light" id="/"  >
+              <img src="./icons/divide.png" alt="divide" width="25px">
+            </div>
+          </div>
+  
+          <div class="row   mt-1 gap-1 justify-content-center">
+            <div class="btn col-2 p-2 2nd-btn-1  shadow  2nd-btn-toggle    btn-light" id="xry">
+              <span>x<sup>y</sup></span>
+            </div>
+            <div class="btn col-2 p-2 2nd-btn-2  shadow  d-none 2nd-btn-toggle   btn-light" id="ysqrtx">
+              <span>y&#8730x</span>
+            </div>
+            <div class="btn num-btn col-2 p-2   shadow     btn-light fw-bold" id="7"  >
+              7
+            </div>
+            <div class="btn num-btn col-2 p-2   shadow     btn-light fw-bold" id="8"  >
+              8
+            </div>
+            <div class="btn num-btn col-2 p-2   shadow     btn-light fw-bold" id="9"  >
+             9
+            </div>
+            <div class="btn col-2 p-2   shadow     btn-light" id="*"  >
+             X
+            </div>
+          </div>
+  
+          <div class="row   mt-1 gap-1 justify-content-center">
+            <div class="btn col-2 p-2 2nd-btn-1  shadow   2nd-btn-toggle  btn-light" id="10rx">
+              <span>10<sup>x</sup></span>
+            </div>
+            <div class="btn col-2 p-2 2nd-btn-2  shadow 2nd-btn-toggle  d-none   btn-light" id="2rx">
+              <span>2<sup>x</sup></span>
+            </div>
+            <div class="btn num-btn col-2 p-2   shadow     btn-light fw-bold" id="4"   >
+              4
+            </div>
+            <div class="btn num-btn col-2 p-2    shadow    btn-light fw-bold" id="5"  >
+              5
+            </div>
+            <div class="btn num-btn col-2 p-2   shadow     btn-light fw-bold" id="6"  >
+              6
+            </div>
+            <div class="btn col-2 p-2  shadow     btn-light" id="-"  >
+              -
+            </div>
+          </div>
+  
+          <div class="row   mt-1 gap-1 justify-content-center">
+            <div class="btn col-2 p-2  2nd-btn-1 shadow  2nd-btn-toggle    btn-light" id="log">
+              log
+            </div>
+            <div class="btn col-2 p-2  2nd-btn-2 shadow  d-none  2nd-btn-toggle  btn-light" id="logbyx">
+              log<sub>y</sub>X
+            </div>
+            <div class="btn num-btn col-2 p-2   shadow     btn-light fw-bold" id="1"  >
+              1
+            </div>
+            <div class="btn num-btn col-2 p-2  shadow      btn-light fw-bold" id="2"  >
+              2
+            </div>
+            <div class="btn num-btn col-2 p-2   shadow     btn-light fw-bold" id="3"  >
+              3
+            </div>
+            <div class="btn col-2 p-2  shadow      btn-light" id="+"  >
+             +
+            </div>
+          </div>
+  
+          <div class="row   mt-1 gap-1 justify-content-center">
+            <div class="btn col-2 p-2  2nd-btn-1  shadow  2nd-btn-toggle   btn-light" id="ln" >
+             ln
+            </div>
+            <div class="btn col-2 p-2  2nd-btn-2  shadow  d-none 2nd-btn-toggle  btn-light" id="erx" >
+             e<sup>x</sup>
+            </div>
+            <div class="btn col-2 p-2   shadow     btn-light"  >
+             +/-
+            </div>
+            <div class="btn num-btn col-2 p-2   shadow     btn-light fw-bold" id="0"  >
+              0
+            </div>
+            <div class="btn col-2 p-2   shadow     btn-light"  >
+             .
+            </div>
+            <div class="btn active col-2 p-2   shadow     btn-primary" id="=">
+             =
+            </div>
+          </div>
+        </div> 
+      </div>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
