--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
   
           <!--Second Row-->
           <div class="row w-75 gap-1 mt-2 ms-1 justify-content-start">
-            <div class="btn col-3 p-2 btn-light px-3">
-              <span>DEG</span>
+            <div class="btn col-3 p-2 btn-light px-3" id="unit">
+              DEG
             </div>
             <div class="btn col-3 p-2   btn-light">
               <span>F-E</span>
@@ -79,23 +79,94 @@
             <!--trigonometry-->
             <div class="col-5">
               <div class="dropdown">
-                <button class="btn d-flex align-items-center border-0 " type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <button class="btn d-flex align-items-center border-0 " type="button" data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">
                   <img src="./icons/trigo.png" alt="" width="21px" class="mx-1">
                   Trigonometry
                  <img src="./icons/down-arrow.png" alt="" width="18px" class="mx-1">
                 </button>
                 <ul class="dropdown-menu p-0 rounded-0">
-                  <li class="d-flex justify-content-center">
-                    <button class="btn col-3 btn-light rounded-0">2<sup>nd</sup></button>
-                    <button class="btn col-3 btn-light rounded-0">sin</button>
-                    <button class="btn col-3 btn-light rounded-0">cos</button>
-                    <button class="btn col-3 btn-light rounded-0">tan</button>
+                  <li class="d-flex justify-content-around">
+                    <button class="btn border-0 t-btn text-nowrap btn-light" id="second-fn-Trigono">
+                      2 <sup>nd</sup>
+                    </button>
+                    <button class="btn border-0 t-btn btn-light text-nowrap trigo-btn-1 trigono-h-btn trigono-btn" id="sin">
+                      sin
+                    </button>
+                    <button class="btn border-0 t-btn text-nowrap btn-light trigono-btn  trigono-h-inv d-none" id="sin-in">
+                      sin <sup>-1</sup>
+                    </button>
+                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-h-inv d-none" id="sin-h-in">
+                      sinh <sup>-1</sup>
+                    </button>
+                    <button class="btn  border-0 t-btn btn-light trigono-h-btn text-nowrap d-none" id="sin-h">
+                      sinh
+                    </button>
+                    <button class="btn border-0 t-btn btn-light text-nowrap trigo-btn-1 trigono-h-btn trigono-btn" id="cos">
+                      cos
+                    </button>
+                    <button class="btn border-0 t-btn  btn-light text-nowrap trigono-btn trigono-h-inv d-none" id="cos-in">
+                      cos <sup>-1</sup>
+                    </button>
+                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-h-inv d-none" id="cos-h-in">
+                      cosh <sup>-1</sup>
+                    </button>
+                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-h-btn d-none" id="cos-h">
+                      cosh
+                    </button>
+                    <button class="btn border-0 t-btn btn-light text-nowrap trigo-btn-1 trigono-h-btn trigono-btn" id="tan">
+                      tan
+                    </button>
+                    <button class="btn border-0 t-btn  btn-light text-nowrap trigono-btn trigono-h-inv d-none" id="tan-in">
+                      tan <sup>-1</sup>
+                    </button>
+                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-h-inv d-none" id="tan-h-in">
+                      tanh <sup>-1</sup>
+                    </button>
+                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-h-btn d-none" id="tan-h">
+                      tanh
+                    </button>
                   </li>
                   <li class="d-flex justify-content-center">
-                    <button class="btn col-3 btn-light rounded-0">hyp</button>
-                    <button class="btn col-3 btn-light rounded-0">sec</button>
-                    <button class="btn col-3 btn-light rounded-0">csc</button>
-                    <button class="btn col-3 btn-light rounded-0">cot</button>
+                    <button class="btn border-0  btn-light text-nowrap" id="hyp">
+                      hyp
+                    </button>
+                    <button class="btn border-0 t-btn btn-light text-nowrap trigo-btn-1 trigono-h-btn trigono-btn" id="sec">
+                      sec
+                    </button>
+                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-btn trigono-h-inv d-none" id="sec-in">
+                      sec <sup>-1</sup>
+                    </button>
+                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-h-inv d-none" id="sec-h-in">
+                      sech <sup>-1</sup>
+                    </button>
+                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-h-btn d-none" id="sec-h">
+                      sech
+                    </button>
+                    <button class="btn border-0 t-btn btn-light text-nowrap trigo-btn-1 trigono-h-btn trigono-btn" id="csc">
+                      csc
+                    </button>
+                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-btn trigono-h-inv d-none" id="csc-in">
+                      csc <sup>-1</sup>
+                    </button>
+                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-h-inv d-none" id="csc-h-in">
+                      csch <sup>-1</sup>
+                    </button>
+                    <button class="btn border-0 t-btn btn-light text-nowrap text-nowrap  trigono-h-btn d-none" id="csc-h">
+                      csch
+                    </button>
+                    <button class="btn border-0 t-btn btn-light text-nowrap trigo-btn-1 trigono-h-btn trigono-btn" id="cot">
+                      cot
+                    </button>
+                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-btn trigono-h-inv d-none" id="cot-in">
+                      cot <sup>-1</sup>
+                    </button>
+                    <button class="btn  border-0 t-btn btn-light text-nowrap trigono-h-inv d-none" id="cot-h-in">
+                      coth <sup>-1</sup>
+                    </button>
+                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-h-btn d-none" id="cot-h">
+                      coth
+                    </button>
+                  </li>
                   </li>
                 </ul>
               </div>
