add mutliple digit arithmetic operation

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </button>
                 <ul class="dropdown-menu p-0 rounded-0">
                   <li class="d-flex justify-content-around">
-                    <button class="btn border-0 t-btn text-nowrap btn-light" id="second-fn-Trigono">
+                    <button class="btn border-0  text-nowrap btn-light" id="second-fn-Trigono">
                       2 <sup>nd</sup>
                     </button>
                     <button class="btn border-0 t-btn btn-light text-nowrap trigo-btn-1 trigono-h-btn trigono-btn" id="sin">
@@ -207,7 +207,7 @@
             <div class="btn col-2 p-2 shadow btn-light">
               <span>e</span>
             </div>
-            <div class="btn col-2 p-2 shadow btn-light" id="C">
+            <div class="btn col-2 p-2 shadow btn-light" id="clear">
              C
             </div>
             <div class="btn col-2 p-2    shadow   btn-light" id="rl">
@@ -349,7 +349,7 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-
+    <!-- <script src="./mainapp.js"></script> -->
     <script src="./app.js"></script>
   </body>
 </html>
