--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>remote calculator</title>
 
+<!--Bootstrap css-->
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
+
+<!--General css-->
 
     <style>
       .btn{
@@ -21,6 +25,7 @@
         background-color: rgb(255, 255, 255);
       }
     </style>
+
   </head>
 
   <body>
@@ -28,7 +33,7 @@
       class="container d-flex justify-content-center min-vh-100 align-items-center"
     >
       <div
-        class="cal p-2 pt-3 bg-light rounded-1"
+        class="cal p-2 pt-3 bg-light rounded-1 shadow-sm"
         style="width: 25rem; height: 38rem"
       >
          <div class="col justify-content-start p-1">
@@ -50,8 +55,8 @@
             <div class="btn col-3 p-2 btn-light px-3" id="unit">
               DEG
             </div>
-            <div class="btn col-3 p-2   btn-light">
-              <span>F-E</span>
+            <div class="btn col-3 p-2   btn-light" id="fe">
+              F-E
             </div>
           </div>
   
@@ -85,6 +90,7 @@
                  <img src="./icons/down-arrow.png" alt="" width="18px" class="mx-1">
                 </button>
                 <ul class="dropdown-menu p-0 rounded-0">
+                  <!--2nd trigonometry area-->
                   <li class="d-flex justify-content-around">
                     <button class="btn border-0  text-nowrap btn-light" id="second-fn-Trigono">
                       2 <sup>nd</sup>
@@ -92,40 +98,41 @@
                     <button class="btn border-0 t-btn btn-light text-nowrap trigo-btn-1 trigono-h-btn trigono-btn" id="sin">
                       sin
                     </button>
-                    <button class="btn border-0 t-btn text-nowrap btn-light trigono-btn  trigono-h-inv d-none" id="sin-in">
+                    <button class="btn border-0 t-btn text-nowrap btn-light trigono-btn  trigono-h-inv d-none" id="sinin">
                       sin <sup>-1</sup>
                     </button>
-                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-h-inv d-none" id="sin-h-in">
+                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-h-inv d-none" id="sinhin">
                       sinh <sup>-1</sup>
                     </button>
-                    <button class="btn  border-0 t-btn btn-light trigono-h-btn text-nowrap d-none" id="sin-h">
+                    <button class="btn  border-0 t-btn btn-light trigono-h-btn text-nowrap d-none" id="sinh">
                       sinh
                     </button>
                     <button class="btn border-0 t-btn btn-light text-nowrap trigo-btn-1 trigono-h-btn trigono-btn" id="cos">
                       cos
                     </button>
-                    <button class="btn border-0 t-btn  btn-light text-nowrap trigono-btn trigono-h-inv d-none" id="cos-in">
+                    <button class="btn border-0 t-btn  btn-light text-nowrap trigono-btn trigono-h-inv d-none" id="cosin">
                       cos <sup>-1</sup>
                     </button>
-                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-h-inv d-none" id="cos-h-in">
+                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-h-inv d-none" id="coshin">
                       cosh <sup>-1</sup>
                     </button>
-                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-h-btn d-none" id="cos-h">
+                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-h-btn d-none" id="cosh">
                       cosh
                     </button>
                     <button class="btn border-0 t-btn btn-light text-nowrap trigo-btn-1 trigono-h-btn trigono-btn" id="tan">
                       tan
                     </button>
-                    <button class="btn border-0 t-btn  btn-light text-nowrap trigono-btn trigono-h-inv d-none" id="tan-in">
+                    <button class="btn border-0 t-btn  btn-light text-nowrap trigono-btn trigono-h-inv d-none" id="tanin">
                       tan <sup>-1</sup>
                     </button>
-                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-h-inv d-none" id="tan-h-in">
+                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-h-inv d-none" id="tanhin">
                       tanh <sup>-1</sup>
                     </button>
-                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-h-btn d-none" id="tan-h">
+                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-h-btn d-none" id="tanh">
                       tanh
                     </button>
                   </li>
+                  <!--Hyp button area-->
                   <li class="d-flex justify-content-center">
                     <button class="btn border-0  btn-light text-nowrap" id="hyp">
                       hyp
@@ -133,37 +140,37 @@
                     <button class="btn border-0 t-btn btn-light text-nowrap trigo-btn-1 trigono-h-btn trigono-btn" id="sec">
                       sec
                     </button>
-                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-btn trigono-h-inv d-none" id="sec-in">
+                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-btn trigono-h-inv d-none" id="secin">
                       sec <sup>-1</sup>
                     </button>
-                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-h-inv d-none" id="sec-h-in">
+                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-h-inv d-none" id="sechin">
                       sech <sup>-1</sup>
                     </button>
-                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-h-btn d-none" id="sec-h">
+                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-h-btn d-none" id="sech">
                       sech
                     </button>
                     <button class="btn border-0 t-btn btn-light text-nowrap trigo-btn-1 trigono-h-btn trigono-btn" id="csc">
                       csc
                     </button>
-                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-btn trigono-h-inv d-none" id="csc-in">
+                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-btn trigono-h-inv d-none" id="cscin">
                       csc <sup>-1</sup>
                     </button>
-                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-h-inv d-none" id="csc-h-in">
+                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-h-inv d-none" id="cschin">
                       csch <sup>-1</sup>
                     </button>
-                    <button class="btn border-0 t-btn btn-light text-nowrap text-nowrap  trigono-h-btn d-none" id="csc-h">
+                    <button class="btn border-0 t-btn btn-light text-nowrap text-nowrap  trigono-h-btn d-none" id="csch">
                       csch
                     </button>
                     <button class="btn border-0 t-btn btn-light text-nowrap trigo-btn-1 trigono-h-btn trigono-btn" id="cot">
                       cot
                     </button>
-                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-btn trigono-h-inv d-none" id="cot-in">
+                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-btn trigono-h-inv d-none" id="cotin">
                       cot <sup>-1</sup>
                     </button>
-                    <button class="btn  border-0 t-btn btn-light text-nowrap trigono-h-inv d-none" id="cot-h-in">
+                    <button class="btn  border-0 t-btn btn-light text-nowrap trigono-h-inv d-none" id="cothin">
                       coth <sup>-1</sup>
                     </button>
-                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-h-btn d-none" id="cot-h">
+                    <button class="btn border-0 t-btn btn-light text-nowrap trigono-h-btn d-none" id="coth">
                       coth
                     </button>
                   </li>
@@ -197,6 +204,8 @@
            
           </div>
   
+          <!-- 2 pi e C clear-->
+
           <div class="row w-auto mt-1 gap-1 justify-content-center">
             <div class="btn col-2 p-2 shadow btn-light"  id="2nd">
              2 <sup>nd</sup>
@@ -204,8 +213,8 @@
             <div class="btn col-2 p-2 shadow btn-light" id="pi">
               π
             </div>
-            <div class="btn col-2 p-2 shadow btn-light">
-              <span>e</span>
+            <div class="btn col-2 p-2 shadow btn-light" id="e">
+              e
             </div>
             <div class="btn col-2 p-2 shadow btn-light" id="clear">
              C
@@ -214,6 +223,8 @@
               <img src="./icons/clear.png" alt="clear" width="25px" id="rl">
             </div>
           </div>
+
+          <!-- x^2 x^3 1/x |x| exp  mod-->
   
           <div class="row   mt-1 gap-1 justify-content-center">
             <div class="btn col-2 p-2 2nd-btn-1 shadow 2nd-btn-toggle  btn-light" id="x2">
@@ -235,6 +246,8 @@
              mod
             </div>
           </div>
+
+          <!-- 2sqrtx 3sqrtx  (  )  n! /-->
   
           <div class="row   mt-1 gap-1 justify-content-center">
             <div class="btn col-2 p-2  2nd-btn-1   shadow 2nd-btn-toggle   btn-light" id="2sqrt">
@@ -256,10 +269,12 @@
               <img src="./icons/divide.png" alt="divide" width="25px">
             </div>
           </div>
+
+          <!-- x^y 7 8 9 x -->
   
           <div class="row   mt-1 gap-1 justify-content-center">
             <div class="btn col-2 p-2 2nd-btn-1  shadow  2nd-btn-toggle    btn-light" id="xry">
-              <span>x<sup>y</sup></span>
+              x<sup>y</sup>
             </div>
             <div class="btn col-2 p-2 2nd-btn-2  shadow  d-none 2nd-btn-toggle   btn-light" id="ysqrtx">
               <span>y&#8730x</span>
@@ -277,6 +292,8 @@
              X
             </div>
           </div>
+
+          <!-- 10^x  2^x  4  5  6  - -->
   
           <div class="row   mt-1 gap-1 justify-content-center">
             <div class="btn col-2 p-2 2nd-btn-1  shadow   2nd-btn-toggle  btn-light" id="10rx">
@@ -299,6 +316,8 @@
             </div>
           </div>
   
+          <!-- log  logyx   1  2  3  + -->
+
           <div class="row   mt-1 gap-1 justify-content-center">
             <div class="btn col-2 p-2  2nd-btn-1 shadow  2nd-btn-toggle    btn-light" id="log">
               log
@@ -319,6 +338,8 @@
              +
             </div>
           </div>
+
+          <!-- ln   e^x   +/-   0   .   = -->
   
           <div class="row   mt-1 gap-1 justify-content-center">
             <div class="btn col-2 p-2  2nd-btn-1  shadow  2nd-btn-toggle   btn-light" id="ln" >
@@ -333,7 +354,7 @@
             <div class="btn num-btn col-2 p-2   shadow     btn-light fw-bold" id="0"  >
               0
             </div>
-            <div class="btn col-2 p-2   shadow     btn-light"  >
+            <div class="btn col-2 p-2   shadow     btn-light" id=".">
              .
             </div>
             <div class="btn active col-2 p-2   shadow     btn-primary" id="=">
@@ -344,6 +365,8 @@
       </div>
     </div>
 
+
+    <!--- bootstrap Javascript  -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
