--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>remote calculator</title>
-
+    <link rel="shortcut icon" href="./icons/favicon.png" type="image/x-icon">
 <!--Bootstrap css-->
 
     <link
@@ -30,11 +30,11 @@
 
   <body>
     <div
-      class="container d-flex justify-content-center min-vh-100 align-items-center"
+      class="container d-flex justify-content-center min-vh-100 align-items-center border-dark"
     >
       <div
-        class="cal p-2 pt-3 bg-light rounded-1 shadow-sm"
-        style="width: 25rem; height: 38rem"
+        class="cal p-2 pt-2 bg-light shadow-lg border border-secondary"
+        style="width: 24rem; height: 37rem"
       >
          <div class="col justify-content-start p-1">
 
@@ -45,7 +45,7 @@
             <div class="col">
               <input
                 type="text"
-                class="form-control fs-1 fw-medium text-end border-1 bg-light shadow-none" id="intext"
+                class="form-control fs-1 fw-medium text-end bg-light border-0 shadow-none" id="intext"
                 />
             </div>
           </div>
@@ -62,21 +62,21 @@
   
           <!--Third Row-->
           <div class="row mt-2 justify-content-center gap-1">
-            <div class="btn col-2 p-2 btn-light disabled">
-              <span>MC</span>
-            </div>
-            <div class="btn col-2 p-2 btn-light disabled">
-              <span>MR</span>
-            </div>
-            <div class="btn col-2 p-2 btn-light">
-              <span>M +</span>
-            </div>
-            <div class="btn col-2 p-2 btn-light">
-              <span>M -</span>
-            </div>
-            <div class="btn col-2 p-2 btn-light">
-              <span>MS</span>
-            </div>
+            <button class="btn col-2 p-2 btn-light fw-medium" id="mc">
+              MC
+            </button>
+            <button class="btn col-2 p-2 btn-light fw-medium" id="mr">
+              MR
+            </button>
+            <button class="btn col-2 p-2 btn-light fw-medium" id="m+">
+              M +
+            </>
+            <button class="btn col-2 p-2 btn-light fw-medium" id="m-">
+              M -
+            </button>
+            <button class="btn col-2 p-2 btn-light fw-medium" id="ms">
+              MS
+            </button>
           </div>
   
           <!--Fourth Row-->
@@ -188,15 +188,15 @@
                  <img src="./icons/down-arrow.png" alt="" width="18px" class="mx-1">
                 </button>
                 <div class="dropdown-menu p-0 rounded-0">
-                  <div class="d-flex justify-content-center">
-                    <button class="btn col btn-light rounded-0">|x|</button>
-                    <button class="btn col btn-light rounded-0">⎣x⎦</button>
-                    <button class="btn col btn-light rounded-0">⎡x⎤</button>
+                  <div class="d-flex ">
+                    <button class="btn col btn-light rounded-0" id="fmodx">|x|</button>
+                    <button class="btn col btn-light rounded-0" id="fmodxl">⎣x⎦</button>
+                    <button class="btn col  btn-light rounded-0" id="fmodxu">⎡x⎤</button>
                   </div>
-                  <div class="d-flex justify-content-center">
-                    <button class="btn col btn-light rounded-0">rand</button>
-                    <button class="btn col btn-light rounded-0">&#8594;dms</button>
-                    <button class="btn col btn-light rounded-0">&#8594;deg</button>
+                  <div class="d-flex ">
+                    <button class="btn  btn-light rounded-0" id="frand" >rand</button>
+                    <button class="btn  btn-light rounded-0" id="fdms">&#8594;dms</button>
+                    <button class="btn   btn-light rounded-0" id="fdeg">&#8594;deg</button>
                   </div>
                 </div>
               </div>
@@ -219,8 +219,8 @@
             <div class="btn col-2 p-2 shadow btn-light" id="clear">
              C
             </div>
-            <div class="btn col-2 p-2    shadow   btn-light" id="rl">
-              <img src="./icons/clear.png" alt="clear" width="25px" id="rl">
+            <div class="btn col-2 p-2    shadow   btn-light" id="del">
+              <img src="./icons/clear.png" alt="clear" width="25px" id="del">
             </div>
           </div>
 
@@ -236,10 +236,10 @@
             <div class="btn col-2 p-2   shadow     btn-light" id="1/x">
               1/x
             </div>
-            <div class="btn col-2 p-2  shadow      btn-light"  >
+            <div class="btn col-2 p-2  shadow      btn-light" id="modx">
               |x|
             </div>
-            <div class="btn col-2 p-2   shadow     btn-light"  >
+            <div class="btn col-2 p-2   shadow     btn-light" id="exp">
               exp
             </div>
             <div class="btn col-2 p-2    shadow    btn-light" id="mod">
@@ -348,7 +348,7 @@
             <div class="btn col-2 p-2  2nd-btn-2  shadow  d-none 2nd-btn-toggle  btn-light" id="erx" >
              e<sup>x</sup>
             </div>
-            <div class="btn col-2 p-2   shadow     btn-light"  >
+            <div class="btn col-2 p-2   shadow     btn-light" id="postoneg">
              +/-
             </div>
             <div class="btn num-btn col-2 p-2   shadow     btn-light fw-bold" id="0"  >
