Add feature if you click on some button which required pre number for calculation will does not work if you not add any number

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
               x<sup>y</sup>
             </div>
             <div class="btn col-2 p-2 2nd-btn-2  shadow  d-none 2nd-btn-toggle   btn-light" id="ysqrtx">
-              <span>y&#8730x</span>
+              y&#8730x
             </div>
             <div class="btn num-btn col-2 p-2   shadow fw-bold    btn-light fw-bold" id="7"  >
               7
@@ -305,10 +305,10 @@
   
           <div class="row   mt-1 gap-1 justify-content-center">
             <div class="btn col-2 p-2 2nd-btn-1  shadow   2nd-btn-toggle  btn-light" id="10rx">
-              <span>10<sup>x</sup></span>
+              10<sup>x</sup>
             </div>
             <div class="btn col-2 p-2 2nd-btn-2  shadow 2nd-btn-toggle  d-none   btn-light" id="2rx">
-              <span>2<sup>x</sup></span>
+              2<sup>x</sup>
             </div>
             <div class="btn num-btn col-2 p-2   shadow   fw-bold   btn-light fw-bold" id="4"   >
               4
